[package]
name = "aoc2020"
version = "0.1.0"
authors = ["Ritoban Roy-Chowdhury <ritobanrc@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.9.0"
anyhow = "1.0"
paste = "1.0.0"
regex = "1.4.0"
euclid = "0.22.0"
